Bone roll is not reset after escape from a rotation #38393

Closed
opened 2014-01-29 10:08:37 +01:00 by Gaia Clary · 6 comments
Member

System Information
windows

Blender Version

Broken:
version 2.69 (sub 0), revision b'60995'. b'Release'
build date: b'2013-10-30', b'16:56:38'
platform: b'Windows:64bit'

Short description of error

Bone roll is not reset when an attempt to rotate a bone is escaped.
This only happens when the rotation was above +/- 90 degree before the escape button is pressed.

Exact steps for others to reproduce the error
see axis_flip.blend :

In the blend file:

Initially the Bone roll is 0

  • Start a rotation around y ( 'r' 'y' , then use the mouse)
  • rotate until the rotation gets > 90 degree
  • press the escape key to cancel the rotation

The bones local x axis has flipped and bone roll is set to -180

I expect that pressing escape would reset the bone to its initial state (bone roll = 0)

**System Information** windows **Blender Version** Broken: version 2.69 (sub 0), revision b'60995'. b'Release' build date: b'2013-10-30', b'16:56:38' platform: b'Windows:64bit' **Short description of error** Bone roll is not reset when an attempt to rotate a bone is escaped. This only happens when the rotation was above +/- 90 degree before the escape button is pressed. **Exact steps for others to reproduce the error** see [axis_flip.blend](https://archive.blender.org/developer/F75566/axis_flip.blend) : In the blend file: Initially the Bone roll is 0 - Start a rotation around y ( 'r' 'y' , then use the mouse) - rotate until the rotation gets > 90 degree - press the escape key to cancel the rotation The bones local x axis has flipped and bone roll is set to -180 I expect that pressing escape would reset the bone to its initial state (bone roll = 0)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @GaiaClary

Added subscriber: @GaiaClary

This issue was referenced by blender/blender-addons-contrib@1e0654f162

This issue was referenced by blender/blender-addons-contrib@1e0654f162afdc75c4e4286e2bd8d276fe668f78

This issue was referenced by 1e0654f162

This issue was referenced by 1e0654f162afdc75c4e4286e2bd8d276fe668f78

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 1e0654f162.

Closed by commit 1e0654f162.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38393
No description provided.