Fix T38393: bone roll not restored properly after cancelling rotation of bones.